# drive

./: compose.yaml
.github/workflows/: drive.yml
src/backend/: pyproject.toml
src/backend/core/: admin.py
src/backend/core/api/: serializers.py  viewsets.py
src/backend/drive/: settings.py
src/frontend/: package.json
src/frontend/apps/drive/: package.json
src/frontend/apps/drive/src/features/explorer/components/: Explorer.scss  ExplorerInner.tsx  ExplorerSearchBar.tsx  ExplorerSearchButton.tsx
src/frontend/apps/drive/src/features/explorer/components/tree/: ExplorerTreeActions.tsx
src/frontend/apps/drive/src/features/i18n/: translations.json
src/frontend/apps/drive/src/features/layouts/components/header/: Header.tsx
src/mail/: package.json
src/proxy/: Dockerfile  README.md  main.py  proxy.py  pyproject.toml
