[tool.poetry]
name = "proxy"
version = "0.1.0"
description = ""
authors = ["gecBurton <g.e.c.burton@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic-settings = "^2.5.2"
uvicorn = "^0.34.3"
requests = "^2.33.0"
mcp = "^1.23.0"
fastapi = ">=0.115.12"
starlette = ">=1.0.1"
urllib3 = ">=2.7.0"
python-multipart = ">=0.0.27"
idna = ">=3.15"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
